--- a/slides/conclusions.html
+++ b/slides/conclusions.html
@@ -5,19 +5,20 @@
     <section>
         <h3>Strengths</h3>
         <ul>
-            <li>[placeholder]</li>
-            <li>[placeholder]</li>
-            <li>[placeholder]</li>
-            <li>[placeholder]</li>
+            <li>easy to use</li>
+            <li>flexible</li>
+            <li>room to improve</li>
+            <li>different needs</li>
+            <li>different contexts</li>
         </ul>
     </section>
 
     <section>
-        <h3>Weaknesses</h3>
+        <h3>what should be improved</h3>
         <ul>
-            <li>[placeholder]</li>
-            <li>[placeholder]</li>
-            <li>[placeholder]</li>
-            <li>[placeholder]</li>
+            <li>blocks with different sizes</li>
+            <li>more communication protocols</li>
+            <li>expansions replication</li>
+            <li>decision besides seed value</li>
         </ul>
     </section>
