--- a/slides/project/blocker-server-instance.html
+++ b/slides/project/blocker-server-instance.html
@@ -2,12 +2,12 @@
 
 <section>
     <pre><code class="js">
-function start() {}
+   start ()
 
-function close() {}
+   close ()
 
-function setPreProcessor(work) {}
+   setPreProcessor (work)
 
-function setPostProcessor(work) {}
+   setPostProcessor (work)
     </code></pre>
 </section>
