--- a/slides/project/random-matrix.html
+++ b/slides/project/random-matrix.html
@@ -1,17 +1,6 @@
 <h2>random-matrix</h2>
-<br>
-<pre><code data-trim>
-var randomMatrix = require('random-matrix');
-var seed1 = 123;
-var seed2 = 456;
-
-var generator1 = randomMatrix(seed1);
-var generator2 = randomMatrix(seed2);
-
-generator1.rand(0, 0) === generator1.rand(0, 0);
-generator1.rand(0, 0) !== generator2.rand(0, 0);
-generator2.rand(0, 0) === generator2.rand(0, 0);
-
-generator1.rand(1, 2) !== generator1.rand(2, 1);
-generator1.rand(1, 2) === generator2.rand(1, 2);
-</code></pre>
+<ul>
+    <li>pseudo random number generator</li>
+    <li>based on seed and coordinates</li>
+    <li>reproducibility</li>
+</ul>
