--- a/slides/project/rule-based-map-generator.html
+++ b/slides/project/rule-based-map-generator.html
@@ -1,31 +1,33 @@
 <section>
     <h2>rule-based-map-generator</h2>
+    <ul>
+        <li>world generation</li>
+        <li>constraint satisfaction</li>
+        <li>handles world expansions seamlessly</li>
+        <li>multiple strategies</li>
+        <li>pluggable rules</li>
+    </ul>
 </section>
 
 <section>
     <h3>API</h3>
-    <pre><code>
-function createWorldInstance(strategy, constraints, blocks) {}
+    <pre><code class="js">
+    createWorldInstance (strategy, constraints, blocks)
 
-function createBlockFactory(strategy) {}
+    createBlockFactory (strategy)
 
-function createConnectorInstance(id, type, blockIds, blockClasses) {}
+    createConnectorInstance (id, type, blockIds, blockClasses)
 
-function getStrategyFactory(strategyName) {}
+    getStrategyFactory (strategyName)
     </code></pre>
 </section>
 
 <section>
     <h3>World configuration parser</h3>
-    <pre><code class="js">
-function parse({
-    seed: 1337,
-    strategy: 'squareGrid',
-    initialMapSize: 4,
-    blocks: [/** set of blocks **/],
-    connectors: [/** set of connectors **/]
-})
-
-// returns a world instance
-    </code></pre>
+    <ul>
+        <li>eases the creation of world instances</li>
+        <li>JSON files parsing</li>
+        <li>can be used along GUI tools</li>
+        <li>game designer friendly</li>
+    </ul>
 </section>
