--- a/slides/case-study/h1z1.html
+++ b/slides/case-study/h1z1.html
@@ -23,6 +23,15 @@
         <li>water well</li>
         <li>building</li>
     </ul>
+    <br><br>
+    <div>
+        <img width="100" height="100"  src="resources/img/tiles/FOREST.png" alt="">
+        <img width="100" height="100"  src="resources/img/tiles/VEHICLES_SPAWN.png" alt="">
+        <img width="100" height="100"  src="resources/img/tiles/GAS_STATION.png" alt="">
+        <img width="100" height="100"  src="resources/img/tiles/POLICE_STATION.png" alt="">
+        <img width="100" height="100"  src="resources/img/tiles/WATER_WELL.png" alt="">
+        <img width="100" height="100"  src="resources/img/tiles/BUILDING.png" alt="">
+    </div>
 </section>
 
 <section>
