--- a/slides/case-study/index.html
+++ b/slides/case-study/index.html
@@ -1,1 +1,73 @@
-<h1>Case study</h1>
+<section>
+    <h2>Case study</h2>
+    <br>
+    <h3>H1Z1 game</h3>
+    <ul>
+        <li>open-world survival MMO game</li>
+        <li>explore to collect resources</li>
+        <li>survive enemies and other players</li>
+        <li>take advantage of buildings</li>
+        <li>points of interest are well distributed</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Case study - World definition</h2>
+    <br>
+    <h3>Blocks</h3>
+    <ul>
+        <li>forest</li>
+        <li>vehicles spawn</li>
+        <li>gas station</li>
+        <li>police station</li>
+        <li>water well</li>
+        <li>building</li>
+    </ul>
+    <br><br>
+    <div>
+        <img width="100" height="100"  src="resources/img/tiles/FOREST.png" alt="">
+        <img width="100" height="100"  src="resources/img/tiles/VEHICLES_SPAWN.png" alt="">
+        <img width="100" height="100"  src="resources/img/tiles/GAS_STATION.png" alt="">
+        <img width="100" height="100"  src="resources/img/tiles/POLICE_STATION.png" alt="">
+        <img width="100" height="100"  src="resources/img/tiles/WATER_WELL.png" alt="">
+        <img width="100" height="100"  src="resources/img/tiles/BUILDING.png" alt="">
+    </div>
+</section>
+
+<section>
+    <h2>Case study - World definition</h2>
+    <br>
+    <h3>world constraints</h3>
+    <ul>
+        <li>initial size: 10 units</li>
+        <li>horizontal boundaries: 40 units</li>
+        <li>vertical boundaries: 40 units</li>
+        <li>map center: vehicles spawn</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Case study - World definition</h2>
+    <br>
+    <h3>block constraints</h3>
+    <ul>
+        <li>Vehicles are spawned in the center of the world</li>
+        <li>Car spawning locations are apart from other car spawn locations by at
+        least 10 map units and apart from gas stations by at least 7 map units</li>
+        <li>Gas station are apart from other gas station by at least 5 units</li>
+        <li>...</li>
+
+<!--
+ Buildings should be apart from other buildings by at least 5 map units
+ Water wells should be in short number so they should be no more than
+3% of the whole map
+ Gas stations should be in short number so they should be no more than
+1% of the whole map -->
+    </ul>
+</section>
+
+<section>
+    <h2>Case study</h2>
+    <br>
+    <h3>demo</h3>
+</section>
