--- a/slides/conclusions.html
+++ b/slides/conclusions.html
@@ -2,23 +2,27 @@
     <h2>Conclusions</h2>
 </section>
 
-    <section>
-        <h3>Strengths</h3>
-        <ul>
-            <li>easy to use</li>
-            <li>flexible</li>
-            <li>room to improve</li>
-            <li>different needs</li>
-            <li>different contexts</li>
-        </ul>
-    </section>
+<section>
+    <h2>Conclusions</h2>
+    <br>
+    <h3>Strengths</h3>
+    <ul>
+        <li>reduce development effort</li>
+        <li>flexible</li>
+        <li>different needs</li>
+        <li>room to improve</li>
+        <li>different contexts</li>
+    </ul>
+</section>
 
-    <section>
-        <h3>what should be improved</h3>
-        <ul>
-            <li>blocks with different sizes</li>
-            <li>more communication protocols</li>
-            <li>expansions replication</li>
-            <li>decision besides seed value</li>
-        </ul>
-    </section>
+<section>
+    <h2>Conclusions</h2>
+    <br>
+    <h3>possible extensions</h3>
+    <ul>
+        <li>blocks with different sizes</li>
+        <li>more communication protocols</li>
+        <li>expansions replication</li>
+        <li>decision besides seed value</li>
+    </ul>
+</section>
