--- a/slides/contents.html
+++ b/slides/contents.html
@@ -1,16 +1,9 @@
-<h1>Contents</h1>
+<h2>Contents</h2>
 
 <ol>
-    <li>Concepts</li>
     <li>Problem</li>
-    <li>Successful cases of content generation</li>
+    <li>Goals of successful MMOG</li>
     <li>Our approach</li>
-    <li>Project</li>
     <li>Case study</li>
-    <li>Conclusions and possible extensions</li>
+    <li>Conclusions</li>
 </ol>
-
-<aside class="notes">
-    Put your speaker notes here.
-    You can see them pressing 's'.
-</aside>
