--- a/slides/our-approach/content-generation-concepts.html
+++ b/slides/our-approach/content-generation-concepts.html
@@ -62,29 +62,31 @@
         <div>
             <h4>world based</h4>
             <ul>
-                <li class="fragment">initial map size</li>
-                <li class="fragment">horizontal and vertical boundaries</li>
-                <li class="fragment">map center</li>
+                <li>initial map size</li>
+                <li>horizontal and vertical boundaries</li>
+                <li>map center</li>
             </ul>
         </div>
         <br>
         <div>
             <h4>block based</h4>
             <ul>
-                <li class="fragment">horizontal and vertical boundaries</li>
-                <li class="fragment">minimum distance to other blocks</li>
-                <li class="fragment">maximum occupation</li>
-                <li class="fragment">maximum occupation by percentage</li>
+                <li>blacklist/whitelist</li>
+                <li>minimum distance to other blocks</li>
+                <li>maximum occupation</li>
+                <li>maximum occupation by percentage</li>
             </ul>
         </div>
     </section>
 
+<!--
     <section>
         <h2>Block selection</h2>
         <div>
             <img width="200" height="220" src="resources/img/generation-phases.png">
         </div>
     </section>
+-->
 
     <section>
         <h2>Rules</h2>
@@ -93,7 +95,7 @@
             <li>maximum occupation</li>
             <li>maximum occupation by percentage</li>
             <li>minimum distance to other blocks</li>
-            <li class="fragment">and more!</li>
+            <li>and more!</li>
         </ul>
 
     </section>
