--- a/slides/our-approach/index.html
+++ b/slides/our-approach/index.html
@@ -1,1 +1,60 @@
-<h1>Our approach</h1>
+<section>
+    <h2>Our approach</h2>
+    <p>generate game worlds based on previously defined set of rules joining the benefits of procedural generation with manual art work creation</p>
+</section>
+
+<section>
+    <h2>Our approach</h2>
+    <ul>
+        <li>world</li>
+        <li>blocks</li>
+        <li>connectors</li>
+        <li>world based constraints</li>
+        <li>block based constraints</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Our approach</h2>
+    <img class="reset" width="40%" src="resources/img/world.png" alt="">
+</section>
+
+<section>
+    <h2>Our approach</h2>
+    <img class="reset" width="40%" src="resources/img/world-full.png" alt="">
+</section>
+
+<section>
+    <h2>Our approach</h2>
+    <br>
+    <p>Modular</p>
+    <ul>
+        <li><i>rule-based-map-generator</i></li>
+        <li><i>blocker</i></li>
+    </ul>
+</section>
+
+<section>
+    <h2>Our approach</h2>
+    <br>
+    <p><i>rule-based-map-generator</i></p>
+    <ul>
+        <li>world generation</li>
+        <li>constraint satisfaction</li>
+        <li>handles world expansions seamlessly</li>
+        <li>multiple strategies</li>
+        <li>pluggable rules</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Our approach</h2>
+    <br>
+    <p><i>blocker</i></p>
+    <ul>
+        <li>network layer on top of <i>rule-based-map-generator</i></li>
+        <li>communication between the server and its clients</li>
+        <li>event based communication</li>
+        <li>multiple rooms</li>
+    </ul>
+</section>
