--- a/slides/problem/index.html
+++ b/slides/problem/index.html
@@ -1,10 +1,10 @@
-<h1>Problem</h1>
+<h2>Problem</h2>
 
 <p>Design and production of MMO game worlds</p>
 
 <ul>
-    <li class="fragment">Effort</li>
-    <li class="fragment">Costs</li>
-    <li class="fragment">Impracticable for indie teams</li>
-    <li class="fragment">Reinventing the wheel</li>
+    <li>Effort</li>
+    <li>Costs</li>
+    <li>Impracticable for indie teams</li>
+    <li>Reinventing the wheel</li>
 </ul>
