--- a/slides/successful-cases/common-goals.html
+++ b/slides/successful-cases/common-goals.html
@@ -1,10 +1,17 @@
 <section>
-    <h2>Common goals</h2>
+    <h2>Goals of successful MMOG</h2>
 
     <ul>
-        <li class="fragment">encourage exploration</li>
-        <li class="fragment">resources distribution</li>
-        <li class="fragment">unfamiliar</li>
-        <li class="fragment">world replication</li>
+        <li>encourage exploration</li>
+        <li>resources distribution</li>
+        <li>unfamiliar</li>
+        <li>world replication</li>
     </ul>
+    <br>
+    <br>
+    <div>
+        <img width="20%" src="resources/img/dontstarve.jpg">
+        <img width="20%" src="resources/img/minecraft.jpg">
+        <img width="20%" src="resources/img/pioneers.png">
+    </div>
 </section>
