more improvements, cmon lets finish this

--- a/slides/our-approach/index.html
+++ b/slides/our-approach/index.html
@@ -1,10 +1,10 @@
 <section>
-    <h2>Our approach</h2>
+    <h2>Approach</h2>
     <p>generate game worlds based on previously defined set of rules joining the benefits of procedural generation with manual art work creation</p>
 </section>
 
 <section>
-    <h2>Our approach</h2>
+    <h2>Approach</h2>
     <ul>
         <li>world</li>
         <li>blocks</li>
@@ -15,17 +15,22 @@
 </section>
 
 <section>
-    <h2>Our approach</h2>
+    <h2>Approach</h2>
     <img class="reset" width="40%" src="resources/img/world.png" alt="">
 </section>
 
 <section>
-    <h2>Our approach</h2>
+    <h2>Approach</h2>
     <img class="reset" width="40%" src="resources/img/world-full.png" alt="">
 </section>
 
 <section>
-    <h2>Our approach</h2>
+    <h2>Approach</h2>
+    <img class="reset" width="40%" src="resources/img/generation-phases.png" alt="">
+</section>
+
+<section>
+    <h2>Approach</h2>
     <br>
     <p>Modular</p>
     <ul>
@@ -35,7 +40,7 @@
 </section>
 
 <section>
-    <h2>Our approach</h2>
+    <h2>Approach</h2>
     <br>
     <p><i>rule-based-map-generator</i></p>
     <ul>
@@ -48,7 +53,7 @@
 </section>
 
 <section>
-    <h2>Our approach</h2>
+    <h2>Approach</h2>
     <br>
     <p><i>blocker</i></p>
     <ul>
