--- a/slides/our-approach/index.html
+++ b/slides/our-approach/index.html
@@ -9,14 +9,20 @@
         <li>world</li>
         <li>blocks</li>
         <li>connectors</li>
-        <li>world based constraints</li>
-        <li>block based constraints</li>
     </ul>
 </section>
 
 <section>
     <h2>Approach</h2>
     <img class="reset" width="40%" src="resources/img/world.png" alt="">
+</section>
+
+<section>
+    <h2>Approach</h2>
+    <ul>
+        <li>world based constraints</li>
+        <li>block based constraints</li>
+    </ul>
 </section>
 
 <section>
